# genie-tooling

./: .gitignore  404.html  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/workflows/: docs.yml  python_ci.yml
LLM_code_assist_instructions/LLM_api_guide/: index.html
LLM_code_assist_instructions/LLM_refactor_guide/: index.html
api/: index.html
api/config_features/: index.html
api/config_models/: index.html
api/core_types/: index.html
api/decorators/: index.html
api/genie_facade/: index.html
api/plugin_manager/: index.html
changelog/: index.html
docs/: LLM_guide.md  changelog.md  index.md  mkdocs.yml
docs/LLM_code_assist_instructions/: LLM_api_guide.md  LLM_refactor_guide.md
docs/api/: config_features.md  config_models.md  core_types.md  decorators.md  genie_facade.md  index.md  plugin_manager.md
docs/guides/: $guide_file  budget.md  checkpointing.md  configuration.md  context_scoping.md  creating_other_plugins.md  creating_plugins.md  creating_rag_plugins.md  creating_tool_plugins.md  distributed_tasks.md  extending_genie_tooling.md  installation.md  logging.md  mcp_composition.md  observability_tracing.md  permissions.md  plugin_architecture.md  progress.md  simplified_configuration.md  token_usage_tracking.md  tool_lookup.md  using_command_processors.md  using_conversation_state.md  using_guardrails.md  using_human_in_loop.md  using_llm_providers.md  using_prompts.md  using_rag.md  using_tools.md
docs/tutorials/: E01_simple_agent_cli.md  E02_ollama_chat_example.md  E03_openai_chat_example.md  E04_gemini_chat_example.md  E05_rag_pipeline_demo.md  E06_run_command_simple_keyword_example.md  E07_run_command_llm_assisted_example.md  E08_decorator_tool_example.md  E09_web_rag_example.md  E10_chroma_tool_lookup_showcase.md  E11_advanced_showcase_agent.md  E12_custom_key_provider_example.md  E13_google_search_demo.md  E14_filesystem_tool_demo.md  E15_prompt_management_example.md  E16_conversation_state_example.md  E17_observability_tracing_example.md  E18_human_in_loop_example.md  E19_llm_output_parsing_example.md  E20_token_usage_example.md  E21_guardrails_example.md  E22_distributed_task_example.md  E23_local_e2e_llama_cpp_server.md  E24_local_e2e_llama_cpp_internal.md  E25_llama_cpp_internal_gbnf_parsing.md  E26_deep_research_agent_e2e.md  E27_pyvider_log_adapter_tracing_example.md  E29_anthropic_native_tool_use.md  E30_mcp_composition_demo.md  E31_budget_and_audit.md  E32_replay_harness.md  E33_weekly_async_skeleton.md  math_proof_assistant_agent_tutorial.md  rag_pipeline_demo.md  simple_agent_cli.md
examples/: E01_simple_agent_cli.py  E02_ollama_chat_example.py  E03_openai_chat_example.py  E04_gemini_chat_example.py  E05_rag_pipeline_demo.py  E06_run_command_simple_keyword_example.py  E07_run_command_llm_assisted_example.py  E08_decorator_tool_example.py  E09_web_rag_example.py  E10_chroma_tool_lookup_showcase.py  E11_advanced_showcase_agent.py  E12_custom_key_provider_example.py  E13_google_search_demo.py  E14_filesystem_tool_demo.py  E15_prompt_management_example.py  E16_conversation_state_example.py  E17_observability_tracing_example.py  E18_human_in_loop_example.py  E19_llm_output_parsing_example.py  E20_token_usage_example.py  E21_guardrails_example.py  E22_distributed_task_example.py  E23_local_e2e_llama_cpp_server.py  E24_local_e2e_llama_cpp_internal.py  E25_llama_cpp_internal_gbnf_parsing.py  E26_deep_research_agent_e2e.py  E27_pyvider_log_adapter_tracing_example.py  E29_anthropic_native_tool_use.py  E30_mcp_composition_demo.py  E31_budget_and_audit.py  E32_replay_harness.py  E33_weekly_async_skeleton.py
examples/advanced_showcase_agent/: main.py
examples/chroma_tool_lookup_showcase.py/: main.py
examples/data/: doc1.txt  doc2.txt  doc3.txt
examples/my_app_prompts_e15/: chat_intro.j2  greeting.txt
examples/rag_pipeline_demo/: main.py
examples/simple_agent_cli/: main.py
guides/configuration/: index.html
guides/creating_other_plugins/: index.html
guides/creating_plugins/: index.html
guides/creating_rag_plugins/: index.html
guides/creating_tool_plugins/: index.html
guides/distributed_tasks/: index.html
guides/extending_genie_tooling/: index.html
guides/installation/: index.html
guides/logging/: index.html
guides/observability_tracing/: index.html
guides/plugin_architecture/: index.html
guides/simplified_configuration/: index.html
guides/token_usage_tracking/: index.html
guides/tool_lookup/: index.html
guides/usage_examples/: index.html
guides/using_command_processors/: index.html
guides/using_conversation_state/: index.html
guides/using_guardrails/: index.html
guides/using_human_in_loop/: index.html
guides/using_llm_providers/: index.html
guides/using_prompts/: index.html
guides/using_rag/: index.html
guides/using_tools/: index.html
print_page/: index.html
scripts/: debug_tool_lookup.py  find_optimal_layers.py  rewoo-example.py  run_math_bot.py
search/: search_index.json
src/genie_tooling/: __init__.py  decorators.py  genie.py  interfaces.py  lint_cli.py  mcp_server_cli.py
tests/: conftest.py
tests/integration/: test_gbnf_generation.py  test_rewoo_advanced.py  test_rewoo_and_tracing.py  test_rewoo_complex_financial_news.py
tests/unit/: test_bootstrap.py  test_cli_smoke.py  test_decorators.py  test_genie_facade.py  test_interface.py  test_phase6_attribution.py
tutorials/E01_simple_agent_cli/: index.html
tutorials/E02_ollama_chat_example/: index.html
tutorials/E03_openai_chat_example/: index.html
tutorials/E04_gemini_chat_example/: index.html
tutorials/E05_rag_pipeline_demo/: index.html
tutorials/E06_run_command_simple_keyword_example/: index.html
tutorials/E07_run_command_llm_assisted_example/: index.html
tutorials/E08_decorator_tool_example/: index.html
tutorials/E09_web_rag_example/: index.html
tutorials/E10_chroma_tool_lookup_showcase/: index.html
tutorials/E11_advanced_showcase_agent/: index.html
tutorials/E12_custom_key_provider_example/: index.html
(+522 files in other folders)
